Fix that spacing...

--- a/root/static/css/screen.css
+++ b/root/static/css/screen.css
@@ -1223,5 +1223,5 @@ progress form button {
     float: right;
     position: absolute;
     right: 7px;
-    top: 2px;
+    top: 3px;
 }
